<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:id="@+id/dialog" android:weightSum="1">
    <RelativeLayout android:id="@+id/relativeLayout1" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1.09">
        <TextView android:text="@string/intr1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/textView2" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_below="@+id/textView1" android:layout_alignLeft="@+id/textView1" android:layout_marginLeft="24dp"></TextView>
        <TextView android:text="@string/intr0" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/textView1" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_alignParentTop="true" android:layout_alignParentLeft="true" android:layout_marginLeft="50dp" android:layout_marginTop="53dp"></TextView>
        <TextView android:text="@string/intr2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/textView3" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_below="@+id/textView2" android:layout_alignLeft="@+id/textView1"></TextView>
        <TextView android:text="@string/intr3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/textView4" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_below="@+id/textView3" android:layout_alignLeft="@+id/textView2"></TextView>
        <ImageView android:id="@+id/imageView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/main_add_enable" android:layout_below="@+id/textView4" android:layout_alignLeft="@+id/textView3" android:layout_marginTop="37dp"></ImageView>
        <TextView android:text="@string/intr4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/textView5" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_alignBottom="@+id/imageView1" android:layout_toRightOf="@+id/imageView1" android:layout_marginLeft="34dp"></TextView>
        <ImageView android:id="@+id/imageView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/main_menu_enable" android:layout_below="@+id/imageView1" android:layout_alignLeft="@+id/imageView1" android:layout_marginTop="24dp"></ImageView>
        <TextView android:text="@string/intr5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/textView6" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_alignBottom="@+id/imageView2" android:layout_alignLeft="@+id/textView5"></TextView>
        <ImageView android:id="@+id/imageView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/main_back_enable" android:layout_below="@+id/imageView2" android:layout_alignLeft="@+id/imageView2" android:layout_marginTop="30dp"></ImageView>
        <TextView android:text="@string/intr6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/textView7" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_alignBottom="@+id/imageView3" android:layout_alignLeft="@+id/textView6"></TextView>
        <TextView android:text="@string/intr7" android:textColor="#00ff00" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/textView8" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_below="@+id/imageView3" android:layout_alignLeft="@+id/imageView3" android:layout_marginTop="52dp"></TextView>
        <TextView android:text="@string/intr8" android:textColor="#00ff00" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/textView9" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_below="@+id/textView8" android:layout_alignLeft="@+id/textView8" android:layout_marginTop="47dp"></TextView>
        <TextView android:text="@string/intr9" android:textColor="#00ff00" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/textView10" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_below="@+id/textView9" android:layout_alignLeft="@+id/textView9" android:layout_marginTop="45dp"></TextView>
    </RelativeLayout>
    
</LinearLayout>
